tests/test_data/default/expected/networking.k8s.io/v1beta1/Ingress/nexus.yaml
# Source: jxboot-helmfile-resources/templates/700-nexus-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nexus
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 80
